--- a/latex.tex
+++ b/latex.tex
@@ -183,6 +183,18 @@ Uzimajući u obzir podatke o izazovima grada i analizu projekata ove prve godine
     \caption{Komponente pametnog grada}
     \label{fig:slika}
 \end{figure}
+\section{Reference}
+\begin{enumerate}
+\item \url{M. Batty et al., "Smart Cities of the future. UCL Working Paper Series", 3rd Central European Conference in Regional Science - CERS 2009, pp. 188, 2009, ISSN 1467-1298}
+\item \url{L.M. Correia, "Smart Cities Applications and Requirements", White Paper. Net!Works European Technology Platform, 2011}
+\item \url{Directorate General for Regional Policy, European Commission}
+\item \url{R. Giffinger et al., Smart Cities: Ranking of European Medium-Sized Cities, Vienna, Austria:Centre of Regional Science (SRF), Vienna University of Technology, 2007}
+\item \url{C. Harrison et al., "Foundations for Smarter Cities", IBM Journal of Research and Development, vol. 54, no. 4, 2010}
+\item \url{G.C. Lazaroiu and M. y Roscia, "Definition methodology for the smart cities model", Energy, vol. 47, pp. 326-332, 2012}
+\item \url{T. Nam and T.A. Pardo, "Conceptualizing Smart City with Dimensions of Technology People and Institutions", The Proceedings of the 12th Annual International Conference on Digital Government Research, 2011}
+\item \url{UN-Habitat (2014) The State Of African Cities 2014. Re-imagining sustainable urban transitions, United Nations Human Settlements Programme}
+\item \url{https://www.techtarget.com/iotagenda/definition/smart-city}    
+\end{enumerate}
 
 
 
