--- a/30_CrnomarkovićŽivanovićDeljaninStamatović.tex
+++ b/30_CrnomarkovićŽivanovićDeljaninStamatović.tex
@@ -1,3 +1,4 @@
+
 \documentclass[a4paper,12pt]{article}
 
 \usepackage{color}
@@ -21,9 +22,9 @@
 \maketitle
 
 \abstract{
-Trenutno u gradovima, na planeti Zemlji, živi oko 4 milijarde ljudi, a sledećih 14 godina će se taj broj povećati za najmanje još jednu milijardu. Uskoro će ukupno više od 70% čovečanstva živeti u gradovima i urbanim područjima, čija infrastruktura je već sada na granici preopterećenja.  
+Trenutno u gradovima, na planeti Zemlji, živi oko 4 milijarde ljudi, a sledećih 14 godina će se taj broj povećati za najmanje još jednu milijardu. 
 Potrošnja električne energije, vodovod, odvoz smeća, zbrinjavanje otpadnih voda, zagađenje vazduha, manjak resursa, razni zdravstveni problemi, otežan saobraćaj – sve su to infrastrukturni problemi sa kojima se svet suočava i oni će još dodatno rasti u budućnosti. 
-Rešenje su takozvani pametni gradovi – Smart Cities – koji koriste postojeću i naprednu tehnologiju kako bi pokušali da promene način na koji živimo, putujemo, radimo i trošimo svoje slobodno vreme u gradovima. 
+Rešenje su takozvani \textbf{pametni gradovi}, koji koriste postojeću i naprednu tehnologiju kako bi pokušali da promene način na koji živimo, putujemo, radimo i trošimo svoje slobodno vreme u gradovima. 
 Gradovi i gradska infrastruktura su izuzetno kompleksni sistemi koji svakodnevno i učinkovito moraju odgovarati na mnogobrojne potrebe onih zbog kojih su nastali i koji ih čine živima, a to su građani. 
 Sve to nameće potrebu za pronalaženjem inovativnih rešenja koja će rešiti sve probleme iznad navedene i upravo je to tema o kojoj se u poslednje vreme sve više govori i koja se nameće u svim segmentima urbanog života, i tom temom se mi bavimo u ovom radu.
 Međutim, iako donosi razne prednosti, pametni gradovi nisu toliko savršeni i još uvek se radi na njihovom usavršavanju i realizovanju ideja i rešenja, ali sa osvrtom na bezbednost i sigurnost građana. Zato ćemo pored raznih prednosti navesti i neke mane koje prate koncept pametnih gradova. 
@@ -34,11 +35,11 @@ Međutim, iako donosi razne prednosti, pametni gradovi nisu toliko savršeni i j
 
 \section{Uvod}
 \label{sec:uvod}
-Gradovi su glavni polovi ljudske i ekonomske aktivnosti. Oni imaju potencijal da stvore sinergiju \footnote{Sinergija je pojam koji opisuje stanje kada je celina nešto veće i drugačije od zbira svojih delova. } omogućavajući velike razvojne mogućnosti njihovim stanovnicima. Međutim, oni takođe stvaraju širok spektar problema koji mogu biti teško rešiti kako rastu u veličini i složenosti. Gradovi su i mesta gde su nejednakosti jače i, ako se njima ne upravlja, njihovi negativni efekti mogu prevazići pozitivne. \\
+Gradovi su glavna čvorišta ljudske i ekonomske aktivnosti. Oni imaju potencijal da stvore sinergiju\footnote{Sinergija je pojam koji opisuje stanje kada je celina nešto veće i drugačije od zbira svojih delova. } omogućavajući velike razvojne mogućnosti njihovim stanovnicima. Međutim, oni takođe stvaraju širok spektar problema koji mogu biti teško rešivi kako rastu u veličini i složenosti. Gradovi su i mesta gde su nejednakosti izraženije i, ako se njima ne upravlja, njihovi negativni efekti mogu prevazići pozitivne. \\
 
-Urbana područja treba da upravljaju svojim razvojem, podržavajući ekonomsku konkurentnost, istovremeno jačajući socijalnu koheziju, održivost životne sredine i povećan kvalitet života svojih građana. \\
+Urbana područja treba da upravljaju svojim razvojem, podržavajući ekonomsku konkurentnost, istovremeno jačajući socijalnu koheziju, održivost životne sredine i povećan kvalitet života svojih građana.\cite{referenca1} \\
 
-Sa razvojem novih tehnoloških inovacija – uglavnom IKT-a \footnote{Informacione i komunikacione tehnologije}– koncept „pametnog grada“ se pojavljuje kao sredstvo za postizanje efikasnijih i održivijih gradova. \\
+Sa razvojem novih tehnoloških inovacija – uglavnom IKT-a\footnote{Informacione i komunikacione tehnologije} – koncept „pametnog grada“ se pojavljuje kao sredstvo za postizanje efikasnijih i održivijih gradova. \\
 
 Od svog nastanka, koncept pametnog grada se razvio od izvođenja konkretnih projekata do sprovođenja globalnih strategija za rešavanje širih gradskih izazova. Stoga je neophodno dobiti sveobuhvatan pregled raspoloživih mogućnosti i povezati ih sa specifičnim izazovima grada.
 
@@ -46,18 +47,18 @@ Od svog nastanka, koncept pametnog grada se razvio od izvođenja konkretnih proj
 \section{Koncept pametnih gradova}
 
 
-Iako postoji neka vrsta konsenzusa \footnote{Konsenzus je jednolasno donošenje odluka.}da oznaka Pametni grad predstavlja inovaciju u upravljanju gradom, njegovim uslugama i infrastrukturama, zajednička definicija pojma još nije data. Postoji širok spektar definicija šta bi pametni grad mogao biti. Međutim, dva trenda se mogu jasno razlikovati u vezi sa glavnim aspektima koje pametni gradovi moraju uzeti u obzir. \\
+Iako postoji neka vrsta konsenzusa\footnote{Konsenzus je jednolasno donošenje odluka.} da oznaka Pametni grad predstavlja inovaciju u upravljanju gradom, njegovim uslugama i infrastrukturama, zajednička definicija pojma još nije data. Postoji širok spektar definicija šta bi pametni grad mogao biti. Međutim, dva trenda se mogu jasno razlikovati u vezi sa glavnim aspektima koje pametni gradovi moraju uzeti u obzir. \\
 
 S jedne strane, postoji skup definicija koje stavljaju akcenat samo na jedan urbani aspekt, izostavljajući ostale okolnosti vezane za razvoj grada. Ova grupa monotopskih opisa pogrešno tumače da je krajnji cilj pametnog grada da obezbedi novi pristup urbanom upravljanju u kome se svi aspekti tretiraju uz međusobnu povezanost koja se dešava u praksi u gradu. Poboljšanje samo jednog dela urbanog ekosistema ne znači da se rešavaju problemi celine. \\
 
-S druge strane, postoje neki autori koji naglašavaju kako je glavna razlika koncepta Pametni grad povezanost svih urbanih aspekata. Zamršeni problemi između urbanizacije su istovremeno infrastrukturni, društveni i institucionalni i ovo preplitanje se ogleda u konceptu pametnog grada. Iz definicija se može primetiti da je infrastruktura centralni deo Pametnog grada i da je tehnologija ona koji to omogućava, ali je kombinacija, povezanost i integracija svih sistema ono što postaje osnovno da bi grad bio zaista pametan. Iz ovih definicija može se zaključiti da koncept pametnog grada podrazumeva sveobuhvatan pristup upravljanju i razvoju grada. Ove definicije pokazuju ravnotežu tehnoloških, ekonomskih i društvenih faktora uključenih u urbani ekosistem. Definicije odražavaju holistički pristup \footnote{Holizam je univerzalno shvatanje da organizam u fiziološkom, psihološkom i socijalnom smislu može da funkcioniše samo kao celina. 
-} na urbane probleme koristeći prednosti novih tehnologija tako da se urbani modeli i odnosi mogu redefinisati.\\
+S druge strane, postoje neki autori koji naglašavaju kako je glavna razlika koncepta Pametni grad povezanost svih urbanih aspekata. Zamršeni problemi između urbanizacije su istovremeno infrastrukturni, društveni i institucionalni i ovo preplitanje se ogleda u konceptu pametnog grada. Iz definicija se može primetiti da je infrastruktura centralni deo Pametnog grada i da je tehnologija ona koji to omogućava, ali je kombinacija, povezanost i integracija svih sistema ono što postaje osnovno da bi grad bio zaista pametan. Iz ovih definicija može se zaključiti da koncept pametnog grada podrazumeva sveobuhvatan pristup upravljanju i razvoju grada. Ove definicije pokazuju ravnotežu tehnoloških, ekonomskih i društvenih faktora uključenih u urbani ekosistem. Definicije odražavaju holistički pristup\footnote{Holizam je univerzalno shvatanje da organizam u fiziološkom, psihološkom i socijalnom smislu može da funkcioniše samo kao celina. 
+} na urbane probleme koristeći prednosti novih tehnologija tako da se urbani modeli i odnosi mogu redefinisati.\cite{referenca2}\\
 
 Iako postoji neka vrsta konsenzusa da oznaka Pametni grad predstavlja inovaciju u upravljanju gradom, njegovim uslugama i infrastrukturama, zajednička definicija pojma još nije data. Postoji širok spektar definicija šta bi pametni grad mogao biti. Međutim, dva trenda se mogu jasno razlikovati u vezi sa glavnim aspektima koje pametni gradovi moraju uzeti u obzir. \\
 
 S jedne strane, postoji skup definicija koje stavljaju akcenat samo na jedan urbani aspekt (tehnološki, ekološki, itd.), izostavljajući ostale okolnosti vezane za razvoj grada. Ova grupa monotopskih opisa pogrešno tumače da je krajnji cilj pametnog grada da obezbedi novi pristup urbanom upravljanju u kome se svi aspekti tretiraju uz međusobnu povezanost koja se dešava u praksi u gradu. Poboljšanje samo jednog dela urbanog ekosistema ne znači da se rešavaju problemi celine. \\
 
-S druge strane, postoje neki autori koji naglašavaju kako je glavna razlika koncepta Pametni grad povezanost svih urbanih aspekata. Zamršeni problemi između urbanizacije su istovremeno infrastrukturni, društveni i institucionalni i ovo preplitanje se ogleda u konceptu pametnog grada. Iz definicija se može primetiti da je infrastruktura centralni deo Pametnog grada i da je tehnologija ona koji to omogućava, ali je kombinacija, povezanost i integracija svih sistema ono što postaje osnovno da bi grad bio zaista pametan. Iz ovih definicija može se zaključiti da koncept pametnog grada podrazumeva sveobuhvatan pristup upravljanju i razvoju grada. Ove definicije pokazuju ravnotežu tehnoloških, ekonomskih i društvenih faktora uključenih u urbani ekosistem. Definicije odražavaju holistički pristup na urbane probleme koristeći prednosti novih tehnologija tako da se urbani modeli i odnosi mogu redefinisati.\\
+S druge strane, postoje neki autori koji naglašavaju kako je glavna razlika koncepta Pametni grad povezanost svih urbanih aspekata. Zamršeni problemi između urbanizacije su istovremeno infrastrukturni, društveni i institucionalni i ovo preplitanje se ogleda u konceptu pametnog grada. Iz definicija se može primetiti da je infrastruktura centralni deo Pametnog grada i da je tehnologija ona koji to omogućava, ali je kombinacija, povezanost i integracija svih sistema ono što postaje osnovno da bi grad bio zaista pametan. Iz ovih definicija može se zaključiti da koncept pametnog grada podrazumeva sveobuhvatan pristup upravljanju i razvoju grada. Ove definicije pokazuju ravnotežu tehnoloških, ekonomskih i društvenih faktora uključenih u urbani ekosistem. Definicije odražavaju holistički pristup na urbane probleme koristeći prednosti novih tehnologija tako da se urbani modeli i odnosi mogu redefinisati.\cite{referenca3}\\
 
 
 
@@ -66,12 +67,12 @@ S druge strane, postoje neki autori koji naglašavaju kako je glavna razlika kon
 \label{sec:termini_i_citiranje}
 
 
- Kako gradovi i dalje neumorno rastu, njihove izazove treba pažljivo razmotriti kako bi se rast stanovništva, ekonomski razvoj i društveni napredak ujednačeno razvijali. Iako se većina globalnog BDP-a \footnote{Bruto domaći proizvod je ukupna vrednost proizvedenih krajnjih dobara i pruženih usluga u jednoj zemlji u određenom vremenskom periodu. } proizvodi u gradovima, sve što se dešava unutar ovih aglomeracija \footnote{Aglomeracija ili šire gradsko područje je prošireno područje grada koje se sastoji od centra i izvesnog broja prigradskih naselja koji zajedno sačinjavaju neprekinuto urbano područje.
+ Kako gradovi i dalje neumorno rastu, njihove izazove treba pažljivo razmotriti kako bi se rast stanovništva, ekonomski razvoj i društveni napredak ujednačeno razvijali. Iako se većina globalnog BDP-a\footnote{Bruto domaći proizvod je ukupna vrednost proizvedenih krajnjih dobara i pruženih usluga u jednoj zemlji u određenom vremenskom periodu. } proizvodi u gradovima, sve što se dešava unutar ovih aglomeracija\footnote{Aglomeracija ili šire gradsko područje je prošireno područje grada koje se sastoji od centra i izvesnog broja prigradskih naselja koji zajedno sačinjavaju neprekinuto urbano područje.
 } ne podrazumeva pozitivne nuspojave. Gradovi su i mesta gde su nejednakosti jače i, ako se njima ne upravlja, negativni efekti mogu prevazići pozitivne. Model Pametni grad može dovesti do boljeg planiranja i upravljanja gradom, a samim tim i do postizanja održivog modela urbanog razvoja. \\
 
-U ASCIMER-ovoj \footnote{ASCIMER (Assessing Smart City Initiatives for the Mediterranean Region) je trogodišnji istraživački projekat koji je podržala Evropska investiciona banka u okviru EIBURS-a, a razvio ga je Politehnički univerzitet u Madridu.} prvoj godini rada, izazovi su identifikovani i klasifikovani u različite grupe kako bi se olakšali naredni koraci projekta. Analizirajući urbanu sredinu, istraživački radovi se bave različitim brojem oblasti za oblikovanje grada. U recenziranoj literaturi smo identifikovali da se svi oni mogu rasporediti u okviru šest glavnih gradskih grupa: upravljanje, ekonomija, mobilnost, životna sredina, ljudi i život. \\
+U ASCIMER-ovoj\footnote{ASCIMER (Assessing Smart City Initiatives for the Mediterranean Region) je trogodišnji istraživački projekat koji je podržala Evropska investiciona banka u okviru EIBURS-a, a razvio ga je Politehnički univerzitet u Madridu.} prvoj godini rada, izazovi su identifikovani i klasifikovani u različite grupe kako bi se olakšali naredni koraci projekta. Analizirajući urbanu sredinu, istraživački radovi se bave različitim brojem oblasti za oblikovanje grada. U recenziranoj literaturi smo identifikovali da se svi oni mogu rasporediti u okviru šest glavnih gradskih grupa: upravljanje, ekonomija, mobilnost, životna sredina, ljudi i život. \\
 
- Kako gradovi i dalje neumorno rastu, njihove izazove treba pažljivo razmotriti kako bi se rast stanovništva, ekonomski razvoj i društveni napredak ujednačeno razvijali. Iako se većina globalnog BDP-a proizvodi u gradovima, sve što se dešava unutar ovih aglomeracija ne podrazumeva pozitivne nuspojave. Gradovi su i mesta gde su nejednakosti jače i, ako se njima ne upravlja, negativni efekti mogu prevazići pozitivne. Model Pametni grad može dovesti do boljeg planiranja i upravljanja gradom, a samim tim i do postizanja održivog modela urbanog razvoja. \\
+ Kako gradovi i dalje neumorno rastu, njihove izazove treba pažljivo razmotriti kako bi se rast stanovništva, ekonomski razvoj i društveni napredak ujednačeno razvijali. Iako se većina globalnog BDP-a proizvodi u gradovima, sve što se dešava unutar ovih aglomeracija ne podrazumeva pozitivne nuspojave. Gradovi su i mesta gde su nejednakosti jače i, ako se njima ne upravlja, negativni efekti mogu prevazići pozitivne. Model Pametni grad može dovesti do boljeg planiranja i upravljanja gradom, a samim tim i do postizanja održivog modela urbanog razvoja.\cite{referenca4} \\
 
 U ASCIMER-ovoj prvoj godini rada, izazovi su identifikovani i klasifikovani u različite grupe kako bi se olakšali naredni koraci projekta. Analizirajući urbanu sredinu, istraživački radovi se bave različitim brojem oblasti za oblikovanje grada. U recenziranoj literaturi smo identifikovali da se svi oni mogu rasporediti u okviru šest glavnih gradskih grupa: upravljanje, ekonomija, mobilnost, životna sredina, ljudi i život. \\
 
@@ -133,7 +134,7 @@ Sve ove informacije su prikupljene u Vodiču za projekte koji tek treba da bude 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.8\textwidth]{pametni grad}
-    \caption{Komponente pametnog grada}
+    \caption{Komponente pametnog grada}\cite{referenca5}
     \label{fig:slika}
 \end{figure}
 
@@ -145,7 +146,7 @@ Sve ove informacije su prikupljene u Vodiču za projekte koji tek treba da bude 
 \label{sec:zakljucak}
 Tokom ove prve godine, ASCIMER projekat je bio fokusiran na razvoj konceptualnog okvira za metodologiju procene za projekte Pametnih gradova u regionu Mediterana. Razumevanje i klasifikacija polja delovanja i postojećih projekata Pametnog grada bili su glavni rezultati projekta ove godine. \\
 
-Kao složen koncept, nekoliko tipova projekata je definisano i zato postaje neophodno odabrati glavne karakteristike koje projekat Pametni grad mora sadržati. Projekti pametnih gradova moraju biti višedimenzionalni i objediniti različita polja delovanja grada, u interakciji sa ljudskim i društvenim kapitalom. Tehnološka rešenja se moraju shvatiti kao sredstvo za postizanje ciljeva pametnih gradova i za nošenje sa izazovima sa kojima se gradovi moraju suočiti. Glavni ciljevi projekta Pametni gradovi moraju biti rešavanje urbanih problema na efikasan način kako bi se poboljšala održivost grada i kvalitet života njegovih stanovnika.  \\
+Kao složen koncept, nekoliko tipova projekata je definisano i zato postaje neophodno odabrati glavne karakteristike koje projekat Pametni grad mora sadržati. Projekti pametnih gradova moraju biti višedimenzionalni i objediniti različita polja delovanja grada, u interakciji sa ljudskim i društvenim kapitalom. Tehnološka rešenja se moraju shvatiti kao sredstvo za postizanje ciljeva pametnih gradova i za nošenje sa izazovima sa kojima se gradovi moraju suočiti. Glavni ciljevi projekta Pametni gradovi moraju biti rešavanje urbanih problema na efikasan način kako bi se poboljšala održivost grada i kvalitet života njegovih stanovnika.\cite{referenca6}  \\
 
 Glavni zahtev za projekte pametnih gradova mora biti rešavanje stvarnih izazova sa kojima će se gradovi suočiti u budućnosti. Ovo je prvi korak koji metodologija procene mora uzeti u obzir. Kada se analizira mediteranski region, ključno je razumeti različite izazove sa kojima se gradovi u južnom i istočno-mediteranskom regionu moraju suočiti i na koji način su oni povezani. Projekti pametnih gradova moraju se pozabaviti problemima današnjih gradova, a istovremeno se osvrnuti na potencijalne probleme sa kojima će se gradovi suočiti u narednim decenijama. \\
 
@@ -153,21 +154,26 @@ Metodologije procene su neophodne za razmatranje stvarnog uticaja projekata. Kla
 
 Uzimajući u obzir podatke o izazovima grada i analizu projekata ove prve godine, biće razvijena metodologija procene kako bi se razmotrili projekti pametnog grada u regionu južnog i istočnog Mediterana. Razvoj pokazitelja prilagođenih glavnim karakteristikama, projektima i izazovima gradova mediteranskog regiona i definisanje odnosa između njih za razvoj ispravne metodologije biće glavni cilj ASCIMER-a tokom naredne godine.\\
 
-\section{Reference}
-\begin{enumerate}
-\item \url{M. Batty et al., "Smart Cities of the future. UCL Working Paper Series", 3rd Central European Conference in Regional Science - CERS 2009, pp. 188, 2009, ISSN 1467-1298}
-\item \url{L.M. Correia, "Smart Cities Applications and Requirements", White Paper. Net!Works European Technology Platform, 2011}
-\item \url{Directorate General for Regional Policy, European Commission}
-\item \url{R. Giffinger et al., Smart Cities: Ranking of European Medium-Sized Cities, Vienna, Austria:Centre of Regional Science (SRF), Vienna University of Technology, 2007}
-\item \url{C. Harrison et al., "Foundations for Smarter Cities", IBM Journal of Research and Development, vol. 54, no. 4, 2010}
-\item \url{G.C. Lazaroiu and M. y Roscia, "Definition methodology for the smart cities model", Energy, vol. 47, pp. 326-332, 2012}
-\item \url{T. Nam and T.A. Pardo, "Conceptualizing Smart City with Dimensions of Technology People and Institutions", The Proceedings of the 12th Annual International Conference on Digital Government Research, 2011}
-\item \url{UN-Habitat (2014) The State Of African Cities 2014. Re-imagining sustainable urban transitions, United Nations Human Settlements Programme}
-\item \url{https://www.techtarget.com/iotagenda/definition/smart-city}
-\end{enumerate}
+\addcontentsline{toc}{section}{Literatura}
+\appendix
+
+\iffalse
+\bibliography{seminarski} 
+\bibliographystyle{plain}
+\fi
+\begin{thebibliography}{9}
+\bibitem{referenca1} \emph{M. Batty et al., Smart Cities of the future. UCL Working Paper Series, 3rd Central European Conference in Regional Science} \\
+\url{https://link.springer.com/article/10.1140/epjst/e2012-01703-3} 17.12.2022.
+\bibitem{referenca2} \emph{L.M. Correia, Smart Cities Applications and Requirements, White Paper. Net!Works European Technology Platform, 2011.} \\
+\url{https://grow.tecnico.ulisboa.pt/wp-content/uploads/2014/0/White_Paper_Smart_Cities_Applications.pdf} 17.12.2022.
+\bibitem{referenca3} \emph{Directorate General for Regional Policy, European Commission.} \\
+\url{https://en.wikipedia.org/wiki/Directorate-General_for_Regional_and_Urban_Policy} 17.12.2022.
+\bibitem{referenca4} \emph{R. Giffinger et al., Smart Cities: Ranking of European Medium-Sized Cities, Vienna, Austria:Centre of Regional Science (SRF), Vienna University of Technology, 2007.} \\
+\url{http://www.smart-cities.eu/download/smart_cities_final_report.pdf} 17.12.2022.
+\bibitem{referenca5} \url{https://www.techtarget.com/iotagenda/definition/smart-city} 17.12.2022.
+\bibitem{referenca6} \emph{C. Harrison et al., "Foundations for Smarter Cities", IBM Journal of Research and Development, vol. 54, no. 4, 2010.}\\
+\url{https://ieeexplore.ieee.org/document/5512826} 17.12.2022.
+\end{thebibliography}
+
+\appendix
 \end{document}
-
-
-
-
-
